# egption_nid_ocr

./: .env.example  .gitattributes  .gitignore  .gitmessage.txt  .gitmessage2.txt  .gitmessage3.txt  Dockerfile  Dockerfile.hf  Dockerfile.oracle  NID_IMPROVEMENTS.md  README-hf.md  README.md  egyptian-ocr.service  nginx.conf  ocr egyption id impl .md  pyproject.toml  requirements.txt  run.bat  run.sh
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  logger.py
app/models/: detector.py  id_parser.py  nid_extractor.py  ocr_engine.py  paddle_vl_engine.py
app/services/: dual_side_processor.py  field_router.py  ocr_visualizer.py  pipeline.py  side_classifier.py
app/static/: ocr_debug_viewer.html
app/utils/: cache.py  image_utils.py  ocr_preprocess.py  text_utils.py
docs/: DEPLOYMENT_SUMMARY.md  FREE_HOSTING_COMPARISON.md  HF_DEPLOYMENT.md  NID_IMPROVEMENTS_COMPLETE.md  NID_OCR_IMPROVEMENTS.md  ONNX_FIELD_DETECTOR_FIX.md  ORACLE_DEPLOYMENT.md  PP_OCRV5_USAGE.md  RUNBOOK.md
scripts/: deploy-hf.bat  deploy-hf.sh  download_models.py  download_weights.py  evaluate_ocr.py  export_yolo_onnx.py  inspect_onnx.py  inspect_paddleocr.py  inspect_yolo.py  setup-oracle.sh  test-deployment.bat  test-deployment.sh  test_basic.py  test_detectors.py  test_imports.py  test_ocr.py  test_onnx_inference.py  test_onnx_real.py  test_paddle_vl.py  test_ppocrv5_standalone.py  verify-endpoints.py  verify_ppocrv5_model.py
terraform/: README.md  main.tf  variables.tf
tests/: test_pipeline.py  test_side_classification.py
