[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egyptian-id-ocr"
version = "1.0.0"
description = "Egyptian National ID OCR System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "onnxruntime>=1.19.0",
    "easyocr>=1.7.1",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0",
    "Pillow>=10.4.0",
    "python-multipart>=0.0.9",
    "paddlepaddle>=2.6.1",
    "paddleocr>=2.7.3",
    "pydantic-settings>=2.2.1",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
